fixed spacing between name and email

--- a/patient/css/booking.css
+++ b/patient/css/booking.css
@@ -1428,3 +1428,7 @@ input[type="date"]::-webkit-clear-button, input[type="time"]::-webkit-clear-butt
 #medical-condition-description .modal-header {
     border-bottom: 1px solid silver;
 }
+
+.mw-25 {
+    min-width: 25%;
+}
